tests/paczka1/fuzzy1/10410439.err
Error in line 3: 5yJi7g54Znl A716 62,5
Error in line 12: 5yJi7g54Znl S496 -1,6
Error in line 4: 5yJi7g54Znl S496 35,5
Error in line 5: 9v2yHNk S496 87,5
Error in line 15: A809 S496 33,3
Error in line 25: 4auDt A716 278,8
Error in line 28: 4auDt S619 52,9
